--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,16 @@
 domain-url: shortable.me
+
+spring:
+  h2:
+    console:
+      enabled: true
+  profiles:
+    active: local
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:tcp://localhost/~/dev/libs/h2/data/shortable
+    username: sa
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
